# mpp-rs

./: .gitignore  AGENTS.md  AUDIT-IETF-SPEC-COMPLIANCE.md  AUDIT_SDK_PARITY.md  CHANGELOG.md  CODE_REVIEW_REPORT.md  Cargo.toml  DOCS_AUDIT.md  Makefile  README.md  RELEASE.md  SDK_SPEC_AUDIT.md  SECURITY.md  deny.toml  docker-compose.yml  sgconfig.yml
.changelog/: RELEASE.md  add-policy-override.md  aged-ducks-jump.md  big-eagles-walk.md  big-snails-laugh.md  bind-session-validation.md  brave-foxes-guard.md  brave-owls-growl.md  bright-stars-shine.md  bump-tempo-t5.md  cache-chain-id.md  calm-channels-top-up.md  calm-echo-description.md  calm-hawks-build.md  calm-otters-pay.md  calm-trees-clean.md  calm-wallet-access-key.md  charge-broadcast-memo-binding.md  charge-builder-and-autoswap.md  charge-retry-safety.md  client-incremental-402-retries.md  config.toml  constant-time-hmac.md  cute-eagles-swim.md  cute-foxes-bake.md  dark-crows-whisper.md  dark-suns-rest.md  dry-hills-twist.md  dry-whales-write.md  dull-hawks-paint.md  dull-moons-wake.md  eager-cows-shake.md  easy-goats-wink.md  easy-hills-write.md  evil-lions-write.md  fail-closed-expiry.md  fair-crabs-sleep.md  fee-payer-approve-target.md  fine-deer-sing.md  fix-keychain-source-did.md  (+60 more)
.github/: CODEOWNERS  dependabot.yml
.github/smoke-cross-sdk/: package-lock.json  package.json
.github/workflows/: changelog.yml  ci.yml  conformance.yml  docs.yml  pr-audit.yml  release.yml  scan-github-actions.yml  smoke-cross-sdk.yml
ast-grep-tests/: no-hmac-equality-compare-test.yml
ast-grep-tests/__snapshots__/: no-hmac-equality-compare-snapshot.yml
crates/alloy-transport-mpp/: Cargo.toml  README.md
crates/alloy-transport-mpp/src/: application.rs  lib.rs  ws.rs
crates/alloy-transport-mpp/tests/: application_ws.rs  ws_integration.rs
examples/: README.md  axum-server.md  basic_server.rs  custom-intents.md  custom-methods.md  easy-server.md  fetch_client.rs  hyper-low-level.md  parse_headers.rs  reqwest-client.md  tower-middleware.md
examples/axum-extractor/: Cargo.toml  README.md
examples/axum-extractor/src/: client.rs  server.rs
examples/axum-server/: Cargo.toml
examples/axum-server/src/: main.rs
examples/basic/: Cargo.toml  README.md
examples/basic/src/: client.rs  server.rs
examples/catalog-client/: Cargo.toml  README.md
examples/catalog-client/src/: main.rs
examples/fetch/: Cargo.toml  README.md
examples/fetch/src/: main.rs
examples/server/: Cargo.toml
examples/server/src/: main.rs
examples/session/multi-fetch/: Cargo.toml  README.md
examples/session/multi-fetch/src/: client.rs  server.rs
examples/session/sse/: Cargo.toml  README.md
examples/session/sse/src/: client.rs  server.rs
examples/stripe/: Cargo.toml  README.md
examples/stripe/src/: client.rs  server.rs
examples/ws/: Cargo.toml  README.md
examples/ws/src/: client.rs  server.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_authorization.rs  fuzz_base64url_json.rs  fuzz_receipt.rs  fuzz_www_authenticate.rs  parse_authorization.rs  parse_receipt.rs  parse_www_authenticate.rs
rules/: no-hmac-equality-compare.yml
src/: body_digest.rs  channel_db.rs  crypto.rs  error.rs  evm.rs  expires.rs  explorer.rs  keystore.rs  lib.rs  mcp.rs  money.rs  network.rs  store.rs  stripe.rs  utils.rs
src/client/: accept_payment_policy.rs  challenge_selection.rs  channel_ops.rs  error.rs  events.rs  fee_payer.rs  fetch.rs  middleware.rs  mod.rs  provider.rs  session_provider.rs  tower.rs  transport.rs  ws.rs
src/client/stripe/: mod.rs  provider.rs
src/client/tempo/: abi.rs  autoswap.rs  balance.rs  channel_ops.rs  charge.rs  cli.rs  error.rs  gas.rs  keychain.rs  mod.rs  provider.rs  routing.rs  session_provider.rs  signing.rs  swap.rs  tx_builder.rs  wallet.rs
src/client/tempo/charge/: mod.rs  tx_builder.rs
src/client/tempo/session/: channel_ops.rs  mod.rs  recovery.rs  store.rs
src/client/tempo/signing/: keychain.rs  mod.rs  p256.rs
src/http/: error.rs  ext.rs  middleware.rs  mod.rs  provider.rs
src/protocol/: intent.rs  method.rs  mod.rs  traits.rs
src/protocol/core/: accept_payment.rs  challenge.rs  headers.rs  mod.rs  types.rs
src/protocol/intents/: authorize.rs  charge.rs  mod.rs  payment_request.rs  session.rs  stream.rs  subscription.rs
src/protocol/methods/: mod.rs
src/protocol/methods/evm/: authorization.rs  charge.rs  helpers.rs  mod.rs  types.rs
src/protocol/methods/stripe/: charge.rs  method.rs  mod.rs  types.rs
src/protocol/methods/tempo/: abi.rs  charge.rs  fee_payer_envelope.rs  intent.rs  method.rs  mod.rs  network.rs  precompile_voucher.rs  proof.rs  session.rs  session_method.rs  session_receipt.rs  stream.rs  stream_method.rs  stream_receipt.rs  stream_storage.rs  stream_verify.rs  transaction.rs  transfers.rs  types.rs  voucher.rs
src/protocol/methods/tempo/stream/: chain.rs  errors.rs  mod.rs  receipt.rs  server.rs  sse.rs  storage.rs  types.rs  voucher.rs
src/protocol/traits/: charge.rs  mod.rs  session.rs  stream.rs
src/proxy/: headers.rs  mod.rs  service.rs
src/proxy/services/: anthropic.rs  mod.rs  openai.rs  stripe.rs
src/server/: amount.rs  axum.rs  axum_ws.rs  compose.rs  events.rs  middleware.rs  mod.rs  mpay.rs  mpp.rs  sse.rs  stripe.rs  tempo.rs  transport.rs  ws.rs  ws_session.rs
src/tempo/: attribution.rs  mod.rs
tests/: integration_charge.rs  integration_stripe.rs  integration_stripe_live.rs  integration_ws.rs  sqlite_interop.rs
