[package]
name = "mpp"
version = "0.6.0"
edition = "2021"
description = "Rust SDK for the Machine Payments Protocol (MPP)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tempoxyz/mpp-rs"
homepage = "https://github.com/tempoxyz/mpp-rs"
documentation = "https://tempoxyz.github.io/mpp-rs"
readme = "README.md"
keywords = ["http", "payments", "402", "authentication"]
categories = ["web-programming", "authentication", "cryptography"]

[features]
default = ["reqwest-default-tls"]

# Side selection
client = ["dep:reqwest"]
server = ["tokio", "futures-core", "async-stream"]

# Method implementations
evm = ["alloy", "hex", "rand"]
tempo = ["evm", "tempo-alloy", "tempo-primitives", "uuid"]

# Utilities
utils = ["hex", "rand"]

# Middleware support (requires client)
middleware = [
    "client",
    "reqwest-middleware",
    "async-trait",
    "anyhow",
    "http-types",
]

# Tower middleware support (server-side)
tower = [
    "dep:tower-layer",
    "dep:tower-service",
    "http-types",
    "dep:http-body",
    "server",
]

# Axum middleware support (server-side convenience)
axum = ["dep:axum-core", "server", "http-types"]

reqwest-default-tls = ["reqwest?/default-tls"]
reqwest-native-tls = ["reqwest?/native-tls"]
reqwest-rustls-tls = ["reqwest?/rustls"]

# Integration tests (requires a running Tempo localnet)
integration = ["tempo", "server", "client", "axum"]

[dependencies]
# Core dependencies (always included)
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_json_canonicalizer = "0.3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing"] }
hmac = "0.12"
sha2 = "0.10"

# Optional dependencies
hex = { version = "0.4", optional = true }
base64 = "0.22"
rand = { version = "0.9", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
tokio = { version = "1", features = [
    "rt",
    "sync",
    "time",
    "macros",
], optional = true }
futures-core = { version = "0.3", optional = true }
async-stream = { version = "0.3", optional = true }
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "4031dad6949b84d68dd13e9c4add5365f6993a17", features = [
    "full",
], optional = true }

# Tempo dependencies (optional)
tempo-alloy = { git = "https://github.com/tempoxyz/tempo", branch = "alloy-2.0", default-features = false, optional = true }
tempo-primitives = { git = "https://github.com/tempoxyz/tempo", branch = "alloy-2.0", default-features = false, optional = true }

# HTTP client dependencies (optional)
reqwest = { version = "0.13", default-features = false, features = [
    "json",
], optional = true }
reqwest-middleware = { version = "0.5", optional = true }
async-trait = { version = "0.1", optional = true }
anyhow = { version = "1", optional = true }
http-types = { package = "http", version = "1", optional = true }

# Tower middleware dependencies (optional)
tower-layer = { version = "0.3", optional = true }
tower-service = { version = "0.3", optional = true }
http-body = { version = "1", optional = true }

# Axum dependencies (optional)
axum-core = { version = "0.5", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
axum = { version = "0.8" }
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "rustls",
] }
hex = "0.4"

[patch.crates-io]
# Alloy sub-crates must be patched to match the git rev used by the `alloy`
# umbrella crate. Without these, transitive dependencies from `tempo-primitives`
# (via reth) resolve alloy sub-crates from crates.io (1.x), causing duplicate
# alloy/reqwest trees when consumed as a git dependency.
alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "4031dad6949b84d68dd13e9c4add5365f6993a17" }
alloy-contract = { git = "https://github.com/alloy-rs/alloy", rev = "4031dad6949b84d68dd13e9c4add5365f6993a17" }
alloy-eips = { git = "https://github.com/alloy-rs/alloy", rev = "4031dad6949b84d68dd13e9c4add5365f6993a17" }
alloy-genesis = { git = "https://github.com/alloy-rs/alloy", rev = "4031dad6949b84d68dd13e9c4add5365f6993a17" }
alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy", rev = "4031dad6949b84d68dd13e9c4add5365f6993a17" }
alloy-network = { git = "https://github.com/alloy-rs/alloy", rev = "4031dad6949b84d68dd13e9c4add5365f6993a17" }
alloy-network-primitives = { git = "https://github.com/alloy-rs/alloy", rev = "4031dad6949b84d68dd13e9c4add5365f6993a17" }
alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "4031dad6949b84d68dd13e9c4add5365f6993a17" }
alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", rev = "4031dad6949b84d68dd13e9c4add5365f6993a17" }
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "4031dad6949b84d68dd13e9c4add5365f6993a17" }
alloy-rpc-types-engine = { git = "https://github.com/alloy-rs/alloy", rev = "4031dad6949b84d68dd13e9c4add5365f6993a17" }
alloy-rpc-types-eth = { git = "https://github.com/alloy-rs/alloy", rev = "4031dad6949b84d68dd13e9c4add5365f6993a17" }
alloy-serde = { git = "https://github.com/alloy-rs/alloy", rev = "4031dad6949b84d68dd13e9c4add5365f6993a17" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "4031dad6949b84d68dd13e9c4add5365f6993a17" }
alloy-signer-local = { git = "https://github.com/alloy-rs/alloy", rev = "4031dad6949b84d68dd13e9c4add5365f6993a17" }
alloy-transport = { git = "https://github.com/alloy-rs/alloy", rev = "4031dad6949b84d68dd13e9c4add5365f6993a17" }
alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", rev = "4031dad6949b84d68dd13e9c4add5365f6993a17" }
