[package]
name = "mpay-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.mpay]
path = ".."

[[bin]]
name = "parse_www_authenticate"
path = "fuzz_targets/parse_www_authenticate.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_authorization"
path = "fuzz_targets/parse_authorization.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parse_receipt"
path = "fuzz_targets/parse_receipt.rs"
test = false
doc = false
bench = false
