[package]
name = "axum-extractor-example"
version = "0.2.0"
edition = "2021"
publish = false

[[bin]]
name = "axum-server"
path = "src/server.rs"

[[bin]]
name = "axum-client"
path = "src/client.rs"

[dependencies]
mpp = { path = "../..", features = ["server", "client", "tempo", "axum"] }
alloy = { version = "2.0", features = ["provider-http"] }
tempo-alloy = "1.6.0"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde_json = "1"
hex = "0.4"
rand = "0.10"
