[package]
name = "basic-example"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "basic-server"
path = "src/server.rs"

[[bin]]
name = "basic-client"
path = "src/client.rs"

[dependencies]
mpp = { path = "../..", features = ["server", "client", "tempo"] }
alloy = { version = "1.2", features = ["provider-http"] }
tempo-alloy = "1"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
hex = "0.4"
rand = "0.9"

[patch.crates-io]
tempo-alloy = { git = "https://github.com/tempoxyz/tempo" }
tempo-primitives = { git = "https://github.com/tempoxyz/tempo" }
