[package]
name = "fetch"
version = "0.1.0"
edition = "2021"
description = "CLI tool for fetching URLs with automatic payment handling"

[[bin]]
name = "fetch"
path = "src/main.rs"

[dependencies]
mpay = { path = "../..", features = ["http", "tempo"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
