[package]
name = "ws-example"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "ws-server"
path = "src/server.rs"

[[bin]]
name = "ws-client"
path = "src/client.rs"

[dependencies]
mpp = { path = "../..", features = ["server", "client", "ws", "tempo"] }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
serde_json = "1"
