[package]
name = "session-multi-fetch-example"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "session-server"
path = "src/server.rs"

[[bin]]
name = "session-client"
path = "src/client.rs"

[dependencies]
mpp = { path = "../../..", features = ["server", "client", "tempo"] }
alloy = { version = "1.8", features = ["provider-http", "sol-types", "contract"] }
tempo-alloy = "1.5"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
rand = "0.9"
