[package]
name = "session-sse-example"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "sse-server"
path = "src/server.rs"

[[bin]]
name = "sse-client"
path = "src/client.rs"

[dependencies]
mpp = { path = "../../..", features = ["server", "client", "tempo"] }
alloy = { version = "1.2", features = ["provider-http"] }
tempo-alloy = "1"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
rand = "0.9"
futures = "0.3"
async-stream = "0.3"
urlencoding = "2"

[patch.crates-io]
tempo-alloy = { git = "https://github.com/tempoxyz/tempo" }
tempo-primitives = { git = "https://github.com/tempoxyz/tempo" }
