[package]
name = "session-sse-example"
version = "0.2.0"
edition = "2021"
publish = false

[[bin]]
name = "sse-server"
path = "src/server.rs"

[[bin]]
name = "sse-client"
path = "src/client.rs"

[dependencies]
mpp = { path = "../../..", features = ["server", "client", "tempo"] }
alloy = { version = "2.0", features = ["provider-http"] }
tempo-alloy = "1.6.0"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
rand = "0.10"
futures = "0.3"
async-stream = "0.3"
urlencoding = "2"
